{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "68c0773e-9971-4785-982d-2a54eb9f498e",
            "actions": [
                {
                    "name": "SecondaryFingerContact",
                    "type": "Button",
                    "id": "06a8bbd8-5783-4cf8-a20f-09f2733ef68e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryFingerContact",
                    "type": "Button",
                    "id": "f9971dc1-4da1-4795-af9f-ad8dd2b02097",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "97c085b1-29e6-4e99-bc4b-338397c8ceb0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "799b7636-a27d-445d-bdfc-2acc9607c10e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0bd3abdd-5c01-4b95-bc27-f7a4bde475ac",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edfa2891-3703-4309-b613-20b0533c5061",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4f00e5d-1ce3-4edf-9951-6cc5d763bcad",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a5345f5-68f0-4b9d-869c-4b4ece1232e0",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}